# geometric-modeling

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
MeshViewerCMake/: CMakeLists.txt  helperFunctions.h  main.cpp  myFace.cpp  myHalfedge.h  myMesh.cpp  myMesh.h  myPoint3D.cpp  myPoint3D.h  myVector3D.cpp  myVector3D.h  myVertex.cpp  myVertex.h
MeshViewerCMake/shaders/: light.frag.glsl  light.vert.glsl
NewMeshViewerCmake/: README.md  imgui.ini
NewMeshViewerCmake/myproj/: helperFunctions.h  imgui_menu.h  main.cpp  myFace.cpp  myMesh.cpp  myVector3D.cpp  myVector3D.h  myVertex.cpp
myproj/: helperFunctions.h  main.cpp  myHalfedge.cpp  myHalfedge.h  myMesh.cpp  myMesh.h  myPoint3D.cpp  myPoint3D.h  myVertex.cpp
